js262/test/language/line-terminators/invalid-regexp-cr.js


/*---
esid: sec-line-terminators
es5id: 7.3-7
description: >
    7.3 - ES5 recognizes the character <CR> (\u000D) as terminating
    regular expression literals
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/
/
